<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft ="16dp"
    android:paddingRight = "16dp">

    <TextView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/titulo"
        android:textSize ="30dp"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:textSize = "16dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:text="@string/nombre"/>

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:textSize = "16dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:text="@string/FechaNacimiento"/>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:textSize = "16dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:text="@string/telefono"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:textSize = "16dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:textSize = "16dp"
        android:layout_alignParentTop = "true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:text="@string/descripción"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorBlanco"
        android:onClick="onClick"
        android:text="@string/botonEditar"/>


</LinearLayout>